<resources>
    <string name="app_name">LSM_Zadania</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="child_rewards">Child Rewards</string>
    <string name="kid_name1">Zosia</string>
    <string name="kid_name2">Bartek</string>
    <string name="kid_name3">Michał</string>
    <string name="n_tasks">0</string>
    <string name="n_points">0</string>
    <string name="button_add_child">ADD CHILD</string>
    <string name="dashboard_button">+ ADD</string>
    <string name="user_grid_text">Assigned to:</string>
    <string name="name_input_string">Name</string>
    <string name="calendar_input_string">Repeat</string>
    <string name="behaviour_string">Behaviour</string>
    <string name="duties_string">Duties</string>
    <string name="childs_name">Child\'s name</string>
    <string name="childs_birthday">Child\'s birthday</string>
    <string name="choose_avatar">Choose avatar:</string>
    <string name="add_child">ChildAddOrEditFragment</string>
    <string name="select_birthdate">Select birthday</string>
</resources>