<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_grey"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_rewards"
        android:textAlignment="center"
        android:textColor="@color/gold_yellow"
        android:textSize="@dimen/header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card_layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_layout_height"
            app:cardBackgroundColor="@color/gold_yellow"
            app:cardCornerRadius="@dimen/card_radius"
            app:contentPadding="10dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/points2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_points"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/tasks2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar2"
                    app:layout_constraintTop_toTopOf="@+id/avatar2"
                    app:drawableStartCompat="@drawable/ic_heart_24" />

                <TextView
                    android:id="@+id/tasks2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_tasks"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/name2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar2"
                    app:layout_constraintTop_toBottomOf="@id/points2"
                    app:drawableStartCompat="@drawable/ic_task_completed" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kid_name"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/avatar2" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card_layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_layout_height"
            app:cardBackgroundColor="@color/gold_yellow"
            app:cardCornerRadius="@dimen/card_radius"
            app:contentPadding="10dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar3"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/points3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_points"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/tasks3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar3"
                    app:layout_constraintTop_toTopOf="@+id/avatar3"
                    app:drawableStartCompat="@drawable/ic_heart_24" />

                <TextView
                    android:id="@+id/tasks3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_tasks"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/name3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar3"
                    app:layout_constraintTop_toBottomOf="@id/points3"
                    app:drawableStartCompat="@drawable/ic_task_completed" />

                <TextView
                    android:id="@+id/name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kid_name"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/avatar3" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card_layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_layout_height"
            app:cardBackgroundColor="@color/gold_yellow"
            app:cardCornerRadius="@dimen/card_radius"
            app:contentPadding="10dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_points"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/tasks"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="@+id/avatar"
                    app:drawableStartCompat="@drawable/ic_heart_24" />

                <TextView
                    android:id="@+id/tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:text="@string/n_tasks"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toBottomOf="@id/points"
                    app:drawableStartCompat="@drawable/ic_task_completed" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kid_name"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/avatar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>